Revert notebook changes

--- a/tutorials/03-emotion-analysis.ipynb
+++ b/tutorials/03-emotion-analysis.ipynb
@@ -39,10 +39,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:52:50.657916Z",
-     "iopub.status.busy": "2023-06-24T15:52:50.657377Z",
-     "iopub.status.idle": "2023-06-24T15:53:02.459490Z",
-     "shell.execute_reply": "2023-06-24T15:53:02.458144Z"
+     "iopub.execute_input": "2023-06-25T09:45:31.526951Z",
+     "iopub.status.busy": "2023-06-25T09:45:31.526303Z",
+     "iopub.status.idle": "2023-06-25T09:45:43.137617Z",
+     "shell.execute_reply": "2023-06-25T09:45:43.136712Z"
     }
    },
    "outputs": [
@@ -50,7 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -72,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:02.465549Z",
-     "iopub.status.busy": "2023-06-24T15:53:02.465108Z",
-     "iopub.status.idle": "2023-06-24T15:53:04.600763Z",
-     "shell.execute_reply": "2023-06-24T15:53:04.599014Z"
+     "iopub.execute_input": "2023-06-25T09:45:43.142669Z",
+     "iopub.status.busy": "2023-06-25T09:45:43.142241Z",
+     "iopub.status.idle": "2023-06-25T09:45:43.540416Z",
+     "shell.execute_reply": "2023-06-25T09:45:43.538430Z"
     }
    },
    "outputs": [
@@ -86,29 +92,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'defhappy.mp4' already there; not retrieving.\n",
-      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/emotion_detector.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 6056 (5.9K) [text/plain]\n",
-      "Saving to: 'emotion_detector.py'\n",
-      "\n",
-      "emotion_detector.py 100%[===================>]   5.91K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-06-23 01:50:16 (31.8 MB/s) - 'emotion_detector.py' saved [6056/6056]\n",
-      "\n",
-      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/face_detector.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2886 (2.8K) [text/plain]\n",
-      "Saving to: 'face_detector.py'\n",
-      "\n",
-      "face_detector.py    100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-06-23 01:50:17 (21.1 MB/s) - 'face_detector.py' saved [2886/2886]\n",
-      "\n"
+      "File ‘defhappy.mp4’ already there; not retrieving.\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘emotion_detector.py’ already there; not retrieving.\r\n",
+      "\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘face_detector.py’ already there; not retrieving.\r\n",
+      "\r\n"
      ]
     }
    ],
@@ -136,10 +136,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:04.607056Z",
-     "iopub.status.busy": "2023-06-24T15:53:04.606456Z",
-     "iopub.status.idle": "2023-06-24T15:53:04.825273Z",
-     "shell.execute_reply": "2023-06-24T15:53:04.824437Z"
+     "iopub.execute_input": "2023-06-25T09:45:43.546934Z",
+     "iopub.status.busy": "2023-06-25T09:45:43.546563Z",
+     "iopub.status.idle": "2023-06-25T09:45:43.735907Z",
+     "shell.execute_reply": "2023-06-25T09:45:43.735297Z"
     }
    },
    "outputs": [
@@ -210,13 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:04.829891Z",
-     "iopub.status.busy": "2023-06-24T15:53:04.829633Z",
-     "iopub.status.idle": "2023-06-24T15:53:06.500826Z",
-     "shell.execute_reply": "2023-06-24T15:53:06.499967Z"
+     "iopub.execute_input": "2023-06-25T09:45:43.740661Z",
+     "iopub.status.busy": "2023-06-25T09:45:43.740387Z",
+     "iopub.status.idle": "2023-06-25T09:45:45.259150Z",
+     "shell.execute_reply": "2023-06-25T09:45:45.258431Z"
     }
    },
    "outputs": [
@@ -247,18 +247,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF FaceDetector successfully added to the dat...</td>\n",
+       "      <td>UDF FaceDetector already exists, nothing added.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
-       "0  UDF FaceDetector successfully added to the dat..."
+       "                                                 0\n",
+       "0  UDF FaceDetector already exists, nothing added."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,10 +292,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:06.505902Z",
-     "iopub.status.busy": "2023-06-24T15:53:06.505640Z",
-     "iopub.status.idle": "2023-06-24T15:53:09.079253Z",
-     "shell.execute_reply": "2023-06-24T15:53:09.078555Z"
+     "iopub.execute_input": "2023-06-25T09:45:45.263580Z",
+     "iopub.status.busy": "2023-06-25T09:45:45.263356Z",
+     "iopub.status.idle": "2023-06-25T09:45:46.999289Z",
+     "shell.execute_reply": "2023-06-25T09:45:46.998193Z"
     }
    },
    "outputs": [
@@ -442,10 +442,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:09.084438Z",
-     "iopub.status.busy": "2023-06-24T15:53:09.084183Z",
-     "iopub.status.idle": "2023-06-24T15:53:10.827185Z",
-     "shell.execute_reply": "2023-06-24T15:53:10.826225Z"
+     "iopub.execute_input": "2023-06-25T09:45:47.003844Z",
+     "iopub.status.busy": "2023-06-25T09:45:47.003600Z",
+     "iopub.status.idle": "2023-06-25T09:45:48.790497Z",
+     "shell.execute_reply": "2023-06-25T09:45:48.789602Z"
     }
    },
    "outputs": [],
@@ -463,10 +463,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:10.832704Z",
-     "iopub.status.busy": "2023-06-24T15:53:10.832380Z",
-     "iopub.status.idle": "2023-06-24T15:53:10.846331Z",
-     "shell.execute_reply": "2023-06-24T15:53:10.845633Z"
+     "iopub.execute_input": "2023-06-25T09:45:48.795166Z",
+     "iopub.status.busy": "2023-06-25T09:45:48.794941Z",
+     "iopub.status.idle": "2023-06-25T09:45:48.804116Z",
+     "shell.execute_reply": "2023-06-25T09:45:48.803467Z"
     }
    },
    "outputs": [],
@@ -528,10 +528,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:10.849642Z",
-     "iopub.status.busy": "2023-06-24T15:53:10.849362Z",
-     "iopub.status.idle": "2023-06-24T15:53:12.519624Z",
-     "shell.execute_reply": "2023-06-24T15:53:12.517148Z"
+     "iopub.execute_input": "2023-06-25T09:45:48.808277Z",
+     "iopub.status.busy": "2023-06-25T09:45:48.808012Z",
+     "iopub.status.idle": "2023-06-25T09:45:50.620174Z",
+     "shell.execute_reply": "2023-06-25T09:45:50.619199Z"
     }
    },
    "outputs": [
@@ -594,13 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:12.526382Z",
-     "iopub.status.busy": "2023-06-24T15:53:12.525977Z",
-     "iopub.status.idle": "2023-06-24T15:53:12.616355Z",
-     "shell.execute_reply": "2023-06-24T15:53:12.615142Z"
+     "iopub.execute_input": "2023-06-25T09:45:50.625164Z",
+     "iopub.status.busy": "2023-06-25T09:45:50.624866Z",
+     "iopub.status.idle": "2023-06-25T09:45:50.690253Z",
+     "shell.execute_reply": "2023-06-25T09:45:50.689572Z"
     }
    },
    "outputs": [
@@ -642,7 +642,7 @@
        "0  UDF FaceDetector successfully dropped"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
