--- a/tutorials/05-asl-action-recognition.ipynb
+++ b/tutorials/05-asl-action-recognition.ipynb
@@ -48,10 +48,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:38.031600Z",
-     "iopub.status.busy": "2023-06-24T15:57:38.031070Z",
-     "iopub.status.idle": "2023-06-24T15:57:44.646875Z",
-     "shell.execute_reply": "2023-06-24T15:57:44.645880Z"
+     "iopub.execute_input": "2023-06-25T09:45:53.534643Z",
+     "iopub.status.busy": "2023-06-25T09:45:53.534109Z",
+     "iopub.status.idle": "2023-06-25T09:46:00.235294Z",
+     "shell.execute_reply": "2023-06-25T09:46:00.234430Z"
     },
     "id": "u6pQ1NdcxEGb",
     "outputId": "297b52a8-11fa-461b-c379-fb4c7c15e4fd"
@@ -87,10 +87,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:44.652358Z",
-     "iopub.status.busy": "2023-06-24T15:57:44.651995Z",
-     "iopub.status.idle": "2023-06-24T15:57:46.708001Z",
-     "shell.execute_reply": "2023-06-24T15:57:46.706150Z"
+     "iopub.execute_input": "2023-06-25T09:46:00.238653Z",
+     "iopub.status.busy": "2023-06-25T09:46:00.238172Z",
+     "iopub.status.idle": "2023-06-25T09:46:00.628117Z",
+     "shell.execute_reply": "2023-06-25T09:46:00.626197Z"
     },
     "id": "4Uv15iq9xEGc",
     "outputId": "b8f8b9d7-74b5-45b8-99dd-76ff41b221eb"
@@ -146,10 +146,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:46.714476Z",
-     "iopub.status.busy": "2023-06-24T15:57:46.713875Z",
-     "iopub.status.idle": "2023-06-24T15:57:46.933796Z",
-     "shell.execute_reply": "2023-06-24T15:57:46.933086Z"
+     "iopub.execute_input": "2023-06-25T09:46:00.635249Z",
+     "iopub.status.busy": "2023-06-25T09:46:00.634699Z",
+     "iopub.status.idle": "2023-06-25T09:46:00.823565Z",
+     "shell.execute_reply": "2023-06-25T09:46:00.822724Z"
     },
     "id": "Tsjzsq2rxEGc",
     "outputId": "2b57d26a-941d-40bc-be15-8e176d262b7b"
@@ -221,10 +221,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:46.937702Z",
-     "iopub.status.busy": "2023-06-24T15:57:46.937468Z",
-     "iopub.status.idle": "2023-06-24T15:57:47.955480Z",
-     "shell.execute_reply": "2023-06-24T15:57:47.954745Z"
+     "iopub.execute_input": "2023-06-25T09:46:00.828346Z",
+     "iopub.status.busy": "2023-06-25T09:46:00.828076Z",
+     "iopub.status.idle": "2023-06-25T09:46:01.693150Z",
+     "shell.execute_reply": "2023-06-25T09:46:01.692433Z"
     },
     "id": "55nnlBXyxEGe",
     "outputId": "db138217-80d0-4fe9-bd73-6a3c7136bd93"
@@ -234,7 +234,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-24-2023 11:57:46 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0081] UDF ASLActionRecognition does not exist, therefore cannot be dropped.\n"
+      "06-25-2023 05:46:00 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0081] UDF ASLActionRecognition does not exist, therefore cannot be dropped.\n"
      ]
     },
     {
@@ -308,10 +308,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:47.960117Z",
-     "iopub.status.busy": "2023-06-24T15:57:47.959867Z",
-     "iopub.status.idle": "2023-06-24T15:57:51.422999Z",
-     "shell.execute_reply": "2023-06-24T15:57:51.421970Z"
+     "iopub.execute_input": "2023-06-25T09:46:01.696477Z",
+     "iopub.status.busy": "2023-06-25T09:46:01.696256Z",
+     "iopub.status.idle": "2023-06-25T09:46:05.042255Z",
+     "shell.execute_reply": "2023-06-25T09:46:05.041321Z"
     },
     "id": "CCAz73LExEGf",
     "outputId": "dd7c4643-c7cf-45ea-e4f4-8ef419ecf5bf"
@@ -330,10 +330,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:51.428176Z",
-     "iopub.status.busy": "2023-06-24T15:57:51.427906Z",
-     "iopub.status.idle": "2023-06-24T15:57:51.693032Z",
-     "shell.execute_reply": "2023-06-24T15:57:51.692241Z"
+     "iopub.execute_input": "2023-06-25T09:46:05.047437Z",
+     "iopub.status.busy": "2023-06-25T09:46:05.047135Z",
+     "iopub.status.idle": "2023-06-25T09:46:05.318436Z",
+     "shell.execute_reply": "2023-06-25T09:46:05.317537Z"
     },
     "id": "8hT1LiYrxEGf"
    },
@@ -394,10 +394,10 @@
      "height": 1000
     },
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:51.697791Z",
-     "iopub.status.busy": "2023-06-24T15:57:51.697471Z",
-     "iopub.status.idle": "2023-06-24T15:57:53.298609Z",
-     "shell.execute_reply": "2023-06-24T15:57:53.297571Z"
+     "iopub.execute_input": "2023-06-25T09:46:05.323349Z",
+     "iopub.status.busy": "2023-06-25T09:46:05.322979Z",
+     "iopub.status.idle": "2023-06-25T09:46:06.988360Z",
+     "shell.execute_reply": "2023-06-25T09:46:06.987504Z"
     },
     "id": "GrWkND_GxEGg",
     "outputId": "9c9adecf-f241-4e82-c1d5-566207a39d22"
@@ -451,9 +451,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-25T09:46:06.992776Z",
+     "iopub.status.busy": "2023-06-25T09:46:06.992538Z",
+     "iopub.status.idle": "2023-06-25T09:46:07.026866Z",
+     "shell.execute_reply": "2023-06-25T09:46:07.026240Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UDF ASLActionRecognition successfully dropped</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               0\n",
+       "0  UDF ASLActionRecognition successfully dropped"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.drop_udf(\"ASLActionRecognition\").df()"
    ]
