--- a/tutorials/06-loading-structured-data.ipynb
+++ b/tutorials/06-loading-structured-data.ipynb
@@ -43,10 +43,10 @@
    "id": "c758b60b-e75e-4128-805d-46a210638daf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:15.137115Z",
-     "iopub.status.busy": "2023-06-24T15:53:15.136582Z",
-     "iopub.status.idle": "2023-06-24T15:53:21.970562Z",
-     "shell.execute_reply": "2023-06-24T15:53:21.969608Z"
+     "iopub.execute_input": "2023-06-25T09:46:09.545164Z",
+     "iopub.status.busy": "2023-06-25T09:46:09.544652Z",
+     "iopub.status.idle": "2023-06-25T09:46:16.274873Z",
+     "shell.execute_reply": "2023-06-25T09:46:16.273867Z"
     }
    },
    "outputs": [
@@ -81,14 +81,21 @@
    "id": "8897b9bb-0993-4eb0-959d-6484a651a90f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:21.975671Z",
-     "iopub.status.busy": "2023-06-24T15:53:21.975369Z",
-     "iopub.status.idle": "2023-06-24T15:53:21.999513Z",
-     "shell.execute_reply": "2023-06-24T15:53:21.998867Z"
+     "iopub.execute_input": "2023-06-25T09:46:16.280327Z",
+     "iopub.status.busy": "2023-06-25T09:46:16.279955Z",
+     "iopub.status.idle": "2023-06-25T09:46:16.304466Z",
+     "shell.execute_reply": "2023-06-25T09:46:16.303909Z"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06-25-2023 05:46:16 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -160,10 +167,10 @@
    "id": "62def7ce-3f83-4fa0-b9fd-2e553b3919ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:22.003147Z",
-     "iopub.status.busy": "2023-06-24T15:53:22.002918Z",
-     "iopub.status.idle": "2023-06-24T15:53:23.351067Z",
-     "shell.execute_reply": "2023-06-24T15:53:23.349280Z"
+     "iopub.execute_input": "2023-06-25T09:46:16.308198Z",
+     "iopub.status.busy": "2023-06-25T09:46:16.307965Z",
+     "iopub.status.idle": "2023-06-25T09:46:16.566403Z",
+     "shell.execute_reply": "2023-06-25T09:46:16.564462Z"
     }
    },
    "outputs": [
@@ -171,9 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'bddtest.zip' already there; not retrieving.\n",
-      "\n",
-      "Archive:  bddtest.zip\n"
+      "File ‘bddtest.zip’ already there; not retrieving.\r\n",
+      "\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  bddtest.zip\r\n"
      ]
     }
    ],
@@ -200,10 +213,10 @@
    "id": "cf8415ac-f9e0-4bee-b2aa-b4e104b10a4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:23.356954Z",
-     "iopub.status.busy": "2023-06-24T15:53:23.356522Z",
-     "iopub.status.idle": "2023-06-24T15:53:24.318170Z",
-     "shell.execute_reply": "2023-06-24T15:53:24.317451Z"
+     "iopub.execute_input": "2023-06-25T09:46:16.572449Z",
+     "iopub.status.busy": "2023-06-25T09:46:16.572061Z",
+     "iopub.status.idle": "2023-06-25T09:46:17.649251Z",
+     "shell.execute_reply": "2023-06-25T09:46:17.648602Z"
     }
    },
    "outputs": [
@@ -272,10 +285,10 @@
    "id": "95b1e0a4-d9f5-40f2-830f-69c8c9f21172",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:24.322941Z",
-     "iopub.status.busy": "2023-06-24T15:53:24.322705Z",
-     "iopub.status.idle": "2023-06-24T15:53:24.625020Z",
-     "shell.execute_reply": "2023-06-24T15:53:24.624202Z"
+     "iopub.execute_input": "2023-06-25T09:46:17.653782Z",
+     "iopub.status.busy": "2023-06-25T09:46:17.653534Z",
+     "iopub.status.idle": "2023-06-25T09:46:17.941639Z",
+     "shell.execute_reply": "2023-06-25T09:46:17.940833Z"
     },
     "tags": []
    },
@@ -342,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "69e378d4-4d30-47cf-84c8-8fe56afe517e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:24.629561Z",
-     "iopub.status.busy": "2023-06-24T15:53:24.629326Z",
-     "iopub.status.idle": "2023-06-24T15:53:29.903979Z",
-     "shell.execute_reply": "2023-06-24T15:53:29.903087Z"
+     "iopub.execute_input": "2023-06-25T09:46:17.945664Z",
+     "iopub.status.busy": "2023-06-25T09:46:17.945413Z",
+     "iopub.status.idle": "2023-06-25T09:46:22.913561Z",
+     "shell.execute_reply": "2023-06-25T09:46:22.912541Z"
     }
    },
    "outputs": [
@@ -423,7 +436,7 @@
        "2  [0.94, 0.77, 0.77, 0.77, 0.6, 0.55, 0.42, 0.39...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,10 +464,10 @@
    "id": "2990038a-00ec-4d36-aae2-82a789f2389a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:53:29.908777Z",
-     "iopub.status.busy": "2023-06-24T15:53:29.908424Z",
-     "iopub.status.idle": "2023-06-24T15:53:30.391304Z",
-     "shell.execute_reply": "2023-06-24T15:53:30.390528Z"
+     "iopub.execute_input": "2023-06-25T09:46:22.916903Z",
+     "iopub.status.busy": "2023-06-25T09:46:22.916532Z",
+     "iopub.status.idle": "2023-06-25T09:46:23.430734Z",
+     "shell.execute_reply": "2023-06-25T09:46:23.429751Z"
     }
    },
    "outputs": [
@@ -557,8 +570,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3396</th>\n",
-       "      <td>3397</td>\n",
+       "      <th>6797</th>\n",
+       "      <td>11153</td>\n",
        "      <td>11581</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -568,8 +581,8 @@
        "      <td>643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3397</th>\n",
-       "      <td>3398</td>\n",
+       "      <th>6798</th>\n",
+       "      <td>11154</td>\n",
        "      <td>11582</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -579,8 +592,8 @@
        "      <td>644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3398</th>\n",
-       "      <td>3399</td>\n",
+       "      <th>6799</th>\n",
+       "      <td>11155</td>\n",
        "      <td>11583</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -590,8 +603,8 @@
        "      <td>642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3399</th>\n",
-       "      <td>3400</td>\n",
+       "      <th>6800</th>\n",
+       "      <td>11156</td>\n",
        "      <td>11584</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -601,8 +614,8 @@
        "      <td>641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3400</th>\n",
-       "      <td>3401</td>\n",
+       "      <th>6801</th>\n",
+       "      <td>11157</td>\n",
        "      <td>11585</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -613,7 +626,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3401 rows × 8 columns</p>\n",
+       "<p>6802 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -624,11 +637,11 @@
        "3                       4            8188                     0   \n",
        "4                       5            8189                     0   \n",
        "...                   ...             ...                   ...   \n",
-       "3396                 3397           11581                  1197   \n",
-       "3397                 3398           11582                  1197   \n",
-       "3398                 3399           11583                  1197   \n",
-       "3399                 3400           11584                  1197   \n",
-       "3400                 3401           11585                  1197   \n",
+       "6797                11153           11581                  1197   \n",
+       "6798                11154           11582                  1197   \n",
+       "6799                11155           11583                  1197   \n",
+       "6800                11156           11584                  1197   \n",
+       "6801                11157           11585                  1197   \n",
        "\n",
        "      bddtestmeta.video_id bddtestmeta.dataset_name bddtestmeta.label  \\\n",
        "0                        4                  bddtest               car   \n",
@@ -637,11 +650,11 @@
        "3                        4                  bddtest               car   \n",
        "4                        4                  bddtest               car   \n",
        "...                    ...                      ...               ...   \n",
-       "3396                     4                  bddtest               car   \n",
-       "3397                     4                  bddtest               car   \n",
-       "3398                     4                  bddtest               car   \n",
-       "3399                     4                  bddtest               car   \n",
-       "3400                     4                  bddtest               car   \n",
+       "6797                     4                  bddtest               car   \n",
+       "6798                     4                  bddtest               car   \n",
+       "6799                     4                  bddtest               car   \n",
+       "6800                     4                  bddtest               car   \n",
+       "6801                     4                  bddtest               car   \n",
        "\n",
        "                                  bddtestmeta.bbox  bddtestmeta.object_id  \n",
        "0         [491.7783, 320.9238, 717.0901, 512.1478]                    512  \n",
@@ -650,13 +663,13 @@
        "3       [811.87067, 325.91223, 948.2217, 408.2217]                    515  \n",
        "4      [673.0254, 325.08084, 751.17786, 367.48267]                    516  \n",
        "...                                            ...                    ...  \n",
-       "3396     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
-       "3397     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
-       "3398  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
-       "3399     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
-       "3400      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
+       "6797     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
+       "6798     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
+       "6799  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
+       "6800     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
+       "6801      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
        "\n",
-       "[3401 rows x 8 columns]"
+       "[6802 rows x 8 columns]"
       ]
      },
      "execution_count": 7,
