--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -53,10 +53,10 @@
    "id": "b6b7f61d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:05.178702Z",
-     "iopub.status.busy": "2023-06-24T15:57:05.178162Z",
-     "iopub.status.idle": "2023-06-24T15:57:16.252416Z",
-     "shell.execute_reply": "2023-06-24T15:57:16.251414Z"
+     "iopub.execute_input": "2023-06-25T09:47:39.323353Z",
+     "iopub.status.busy": "2023-06-25T09:47:39.322865Z",
+     "iopub.status.idle": "2023-06-25T09:47:49.107405Z",
+     "shell.execute_reply": "2023-06-25T09:47:49.106532Z"
     }
    },
    "outputs": [
@@ -65,15 +65,6 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "ray 2.4.0 requires grpcio<=1.51.3,>=1.42.0; python_version >= \"3.10\" and sys_platform != \"darwin\", but you have grpcio 1.56.0 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0m"
      ]
     },
     {
@@ -107,10 +98,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:16.256492Z",
-     "iopub.status.busy": "2023-06-24T15:57:16.256224Z",
-     "iopub.status.idle": "2023-06-24T15:57:17.665710Z",
-     "shell.execute_reply": "2023-06-24T15:57:17.664027Z"
+     "iopub.execute_input": "2023-06-25T09:47:49.112357Z",
+     "iopub.status.busy": "2023-06-25T09:47:49.112077Z",
+     "iopub.status.idle": "2023-06-25T09:47:49.366458Z",
+     "shell.execute_reply": "2023-06-25T09:47:49.364690Z"
     }
    },
    "outputs": [
@@ -151,10 +142,10 @@
    "id": "56913976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:17.671555Z",
-     "iopub.status.busy": "2023-06-24T15:57:17.671222Z",
-     "iopub.status.idle": "2023-06-24T15:57:17.846001Z",
-     "shell.execute_reply": "2023-06-24T15:57:17.845109Z"
+     "iopub.execute_input": "2023-06-25T09:47:49.371882Z",
+     "iopub.status.busy": "2023-06-25T09:47:49.371508Z",
+     "iopub.status.idle": "2023-06-25T09:47:49.523253Z",
+     "shell.execute_reply": "2023-06-25T09:47:49.522307Z"
     }
    },
    "outputs": [],
@@ -179,10 +170,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:17.851281Z",
-     "iopub.status.busy": "2023-06-24T15:57:17.851024Z",
-     "iopub.status.idle": "2023-06-24T15:57:22.323678Z",
-     "shell.execute_reply": "2023-06-24T15:57:22.322901Z"
+     "iopub.execute_input": "2023-06-25T09:47:49.526700Z",
+     "iopub.status.busy": "2023-06-25T09:47:49.526373Z",
+     "iopub.status.idle": "2023-06-25T09:47:53.582949Z",
+     "shell.execute_reply": "2023-06-25T09:47:53.582077Z"
     }
    },
    "outputs": [
@@ -362,10 +353,10 @@
    "id": "bc57b1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:22.328967Z",
-     "iopub.status.busy": "2023-06-24T15:57:22.328679Z",
-     "iopub.status.idle": "2023-06-24T15:57:23.981148Z",
-     "shell.execute_reply": "2023-06-24T15:57:23.980503Z"
+     "iopub.execute_input": "2023-06-25T09:47:53.587853Z",
+     "iopub.status.busy": "2023-06-25T09:47:53.587520Z",
+     "iopub.status.idle": "2023-06-25T09:47:55.185729Z",
+     "shell.execute_reply": "2023-06-25T09:47:55.184975Z"
     }
    },
    "outputs": [
@@ -380,7 +371,7 @@
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7fcac5be7d90>"
+       "<evadb.models.storage.batch.Batch at 0x7efbccf15fc0>"
       ]
      },
      "execution_count": 5,
@@ -420,10 +411,10 @@
    "id": "d8b1abe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:23.986143Z",
-     "iopub.status.busy": "2023-06-24T15:57:23.985885Z",
-     "iopub.status.idle": "2023-06-24T15:57:32.979668Z",
-     "shell.execute_reply": "2023-06-24T15:57:32.978658Z"
+     "iopub.execute_input": "2023-06-25T09:47:55.188953Z",
+     "iopub.status.busy": "2023-06-25T09:47:55.188647Z",
+     "iopub.status.idle": "2023-06-25T09:48:04.510780Z",
+     "shell.execute_reply": "2023-06-25T09:48:04.509779Z"
     }
    },
    "outputs": [
@@ -485,10 +476,10 @@
    "id": "66b0bd42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-24T15:57:32.985014Z",
-     "iopub.status.busy": "2023-06-24T15:57:32.984337Z",
-     "iopub.status.idle": "2023-06-24T15:57:35.915562Z",
-     "shell.execute_reply": "2023-06-24T15:57:35.914708Z"
+     "iopub.execute_input": "2023-06-25T09:48:04.516301Z",
+     "iopub.status.busy": "2023-06-25T09:48:04.515456Z",
+     "iopub.status.idle": "2023-06-25T09:48:07.328747Z",
+     "shell.execute_reply": "2023-06-25T09:48:07.328031Z"
     }
    },
    "outputs": [
@@ -496,7 +487,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-24-2023 11:57:33 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
+      "06-25-2023 05:48:05 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
      ]
     },
     {
